# ClassSelection

./: .gitignore  CMakeLists.txt  DataBase.cpp  DataBase.h  LinkList.cpp  LinkList.h  admin_mode.cpp  admin_mode.h  main.cpp  main.h  menus.cpp  menus.h  student_mode.cpp  student_mode.h  test.cpp
include/: curses.h
test_data_gen/: GEN.py  IDs.txt  main.py  relations.txt  student_data
